semantic/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: _TYPE _ID $@1 _LPAREN parameter_list _RPAREN body

    6 parameter_list: %empty
    7               | parameters

    8 parameters: parameter
    9           | parameters _COMMA parameter

   10 parameter: _TYPE _ID

   11 body: _LBRACKET variable_list statement_list _RBRACKET

   12 variable_list: %empty
   13              | variable_list variable

   14 $@2: %empty

   15 variable: _TYPE $@2 vars declaration _SEMICOLON

   16 declaration: %empty
   17            | _ASSIGN _INT_NUMBER
   18            | _ASSIGN _UINT_NUMBER

   19 vars: _ID
   20     | vars _COMMA _ID

   21 statement_list: %empty
   22               | statement_list statement

   23 statement: compound_statement
   24          | assignment_statement
   25          | if_statement
   26          | return_statement
   27          | unaryop _SEMICOLON
   28          | select_statement
   29          | para_statement
   30          | switch_statement

   31 $@3: %empty

   32 switch_statement: _SWITCH _LPAREN _ID $@3 _RPAREN _LBRACKET cases otherwise _RBRACKET

   33 cases: case
   34      | cases case

   35 $@4: %empty

   36 case: _CASE literal $@4 _COLON statement break

   37 break: %empty
   38      | _BREAK _SEMICOLON

   39 otherwise: %empty
   40          | _OTHERWISE _COLON statement

   41 para_statement: _PARA _LPAREN _ID _ASSIGN literal _EN literal _RPAREN statement

   42 $@5: %empty

   43 select_statement: _SELECT $@5 vars _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

   44 $@6: %empty

   45 compound_statement: _LBRACKET $@6 variable_list statement_list _RBRACKET

   46 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   47 num_exp: exp
   48        | num_exp _AROP exp

   49 exp: literal
   50    | _ID
   51    | function_call
   52    | _LPAREN num_exp _RPAREN

   53 unaryop: _ID _UNOP

   54 literal: _INT_NUMBER
   55        | _UINT_NUMBER

   56 $@7: %empty

   57 function_call: _ID $@7 _LPAREN argument_list _RPAREN

   58 argument_list: %empty
   59              | arguments

   60 arguments: argument
   61          | arguments _COMMA argument

   62 argument: num_exp

   63 if_statement: if_part
   64             | if_part _ELSE statement

   65 if_part: _IF _LPAREN rel_exp _RPAREN statement

   66 rel_exp: num_exp _RELOP num_exp

   67 return_statement: _RETURN num_exp _SEMICOLON
   68                 | _RETURN _SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _TYPE <i> (258) 5 10 15
    _IF (259) 65
    _ELSE (260) 64
    _RETURN (261) 67 68
    _ID <s> (262) 5 10 19 20 32 41 43 46 50 53 57
    _INT_NUMBER <s> (263) 17 54
    _UINT_NUMBER <s> (264) 18 55
    _LPAREN (265) 5 32 41 43 52 57 65
    _RPAREN (266) 5 32 41 43 52 57 65
    _LBRACKET (267) 11 32 45
    _RBRACKET (268) 11 32 45
    _ASSIGN (269) 17 18 41 46
    _SEMICOLON (270) 15 27 38 43 46 67 68
    _AROP <i> (271) 48
    _RELOP <i> (272) 66
    _UNOP (273) 53
    _SELECT (274) 43
    _COMMA (275) 9 20 61
    _FROM (276) 43
    _WHERE (277) 43
    _PARA (278) 41
    _EN (279) 41
    _SWITCH (280) 32
    _CASE (281) 36
    _BREAK (282) 38
    _OTHERWISE (283) 40
    _COLON (284) 36 40
    ONLY_IF (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program (32)
        on left: 1
        on right: 0
    function_list (33)
        on left: 2 3
        on right: 1 3
    function (34)
        on left: 5
        on right: 2 3
    $@1 (35)
        on left: 4
        on right: 5
    parameter_list (36)
        on left: 6 7
        on right: 5
    parameters (37)
        on left: 8 9
        on right: 7 9
    parameter (38)
        on left: 10
        on right: 8 9
    body (39)
        on left: 11
        on right: 5
    variable_list (40)
        on left: 12 13
        on right: 11 13 45
    variable (41)
        on left: 15
        on right: 13
    $@2 (42)
        on left: 14
        on right: 15
    declaration (43)
        on left: 16 17 18
        on right: 15
    vars (44)
        on left: 19 20
        on right: 15 20 43
    statement_list (45)
        on left: 21 22
        on right: 11 22 45
    statement (46)
        on left: 23 24 25 26 27 28 29 30
        on right: 22 36 40 41 64 65
    switch_statement (47)
        on left: 32
        on right: 30
    $@3 (48)
        on left: 31
        on right: 32
    cases (49)
        on left: 33 34
        on right: 32 34
    case (50)
        on left: 36
        on right: 33 34
    $@4 (51)
        on left: 35
        on right: 36
    break (52)
        on left: 37 38
        on right: 36
    otherwise (53)
        on left: 39 40
        on right: 32
    para_statement (54)
        on left: 41
        on right: 29
    select_statement (55)
        on left: 43
        on right: 28
    $@5 (56)
        on left: 42
        on right: 43
    compound_statement (57)
        on left: 45
        on right: 23
    $@6 (58)
        on left: 44
        on right: 45
    assignment_statement (59)
        on left: 46
        on right: 24
    num_exp <i> (60)
        on left: 47 48
        on right: 46 48 52 62 66 67
    exp <i> (61)
        on left: 49 50 51 52
        on right: 47 48
    unaryop (62)
        on left: 53
        on right: 27
    literal <i> (63)
        on left: 54 55
        on right: 36 41 49
    function_call <i> (64)
        on left: 57
        on right: 51
    $@7 (65)
        on left: 56
        on right: 57
    argument_list (66)
        on left: 58 59
        on right: 57
    arguments (67)
        on left: 60 61
        on right: 59 61
    argument <i> (68)
        on left: 62
        on right: 60 61
    if_statement (69)
        on left: 63 64
        on right: 25
    if_part (70)
        on left: 65
        on right: 63 64
    rel_exp <i> (71)
        on left: 66
        on right: 43 65
    return_statement (72)
        on left: 67 68
        on right: 26


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: _TYPE . _ID $@1 _LPAREN parameter_list _RPAREN body

    _ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: _TYPE _ID . $@1 _LPAREN parameter_list _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: _TYPE _ID $@1 . _LPAREN parameter_list _RPAREN body

    _LPAREN  shift, and go to state 9


State 9

    5 function: _TYPE _ID $@1 _LPAREN . parameter_list _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter_list)

    parameter_list  go to state 11
    parameters      go to state 12
    parameter       go to state 13


State 10

   10 parameter: _TYPE . _ID

    _ID  shift, and go to state 14


State 11

    5 function: _TYPE _ID $@1 _LPAREN parameter_list . _RPAREN body

    _RPAREN  shift, and go to state 15


State 12

    7 parameter_list: parameters .
    9 parameters: parameters . _COMMA parameter

    _COMMA  shift, and go to state 16

    $default  reduce using rule 7 (parameter_list)


State 13

    8 parameters: parameter .

    $default  reduce using rule 8 (parameters)


State 14

   10 parameter: _TYPE _ID .

    $default  reduce using rule 10 (parameter)


State 15

    5 function: _TYPE _ID $@1 _LPAREN parameter_list _RPAREN . body

    _LBRACKET  shift, and go to state 17

    body  go to state 18


State 16

    9 parameters: parameters _COMMA . parameter

    _TYPE  shift, and go to state 10

    parameter  go to state 19


State 17

   11 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 12 (variable_list)

    variable_list  go to state 20


State 18

    5 function: _TYPE _ID $@1 _LPAREN parameter_list _RPAREN body .

    $default  reduce using rule 5 (function)


State 19

    9 parameters: parameters _COMMA parameter .

    $default  reduce using rule 9 (parameters)


State 20

   11 body: _LBRACKET variable_list . statement_list _RBRACKET
   13 variable_list: variable_list . variable

    _TYPE  shift, and go to state 21

    $default  reduce using rule 21 (statement_list)

    variable        go to state 22
    statement_list  go to state 23


State 21

   15 variable: _TYPE . $@2 vars declaration _SEMICOLON

    $default  reduce using rule 14 ($@2)

    $@2  go to state 24


State 22

   13 variable_list: variable_list variable .

    $default  reduce using rule 13 (variable_list)


State 23

   11 body: _LBRACKET variable_list statement_list . _RBRACKET
   22 statement_list: statement_list . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 29
    _SELECT    shift, and go to state 30
    _PARA      shift, and go to state 31
    _SWITCH    shift, and go to state 32

    statement             go to state 33
    switch_statement      go to state 34
    para_statement        go to state 35
    select_statement      go to state 36
    compound_statement    go to state 37
    assignment_statement  go to state 38
    unaryop               go to state 39
    if_statement          go to state 40
    if_part               go to state 41
    return_statement      go to state 42


State 24

   15 variable: _TYPE $@2 . vars declaration _SEMICOLON

    _ID  shift, and go to state 43

    vars  go to state 44


State 25

   65 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 45


State 26

   67 return_statement: _RETURN . num_exp _SEMICOLON
   68                 | _RETURN . _SEMICOLON

    _ID           shift, and go to state 46
    _INT_NUMBER   shift, and go to state 47
    _UINT_NUMBER  shift, and go to state 48
    _LPAREN       shift, and go to state 49
    _SEMICOLON    shift, and go to state 50

    num_exp        go to state 51
    exp            go to state 52
    literal        go to state 53
    function_call  go to state 54


State 27

   46 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON
   53 unaryop: _ID . _UNOP

    _ASSIGN  shift, and go to state 55
    _UNOP    shift, and go to state 56


State 28

   45 compound_statement: _LBRACKET . $@6 variable_list statement_list _RBRACKET

    $default  reduce using rule 44 ($@6)

    $@6  go to state 57


State 29

   11 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 11 (body)


State 30

   43 select_statement: _SELECT . $@5 vars _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

    $default  reduce using rule 42 ($@5)

    $@5  go to state 58


State 31

   41 para_statement: _PARA . _LPAREN _ID _ASSIGN literal _EN literal _RPAREN statement

    _LPAREN  shift, and go to state 59


State 32

   32 switch_statement: _SWITCH . _LPAREN _ID $@3 _RPAREN _LBRACKET cases otherwise _RBRACKET

    _LPAREN  shift, and go to state 60


State 33

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


State 34

   30 statement: switch_statement .

    $default  reduce using rule 30 (statement)


State 35

   29 statement: para_statement .

    $default  reduce using rule 29 (statement)


State 36

   28 statement: select_statement .

    $default  reduce using rule 28 (statement)


State 37

   23 statement: compound_statement .

    $default  reduce using rule 23 (statement)


State 38

   24 statement: assignment_statement .

    $default  reduce using rule 24 (statement)


State 39

   27 statement: unaryop . _SEMICOLON

    _SEMICOLON  shift, and go to state 61


State 40

   25 statement: if_statement .

    $default  reduce using rule 25 (statement)


State 41

   63 if_statement: if_part .
   64             | if_part . _ELSE statement

    _ELSE  shift, and go to state 62

    $default  reduce using rule 63 (if_statement)


State 42

   26 statement: return_statement .

    $default  reduce using rule 26 (statement)


State 43

   19 vars: _ID .

    $default  reduce using rule 19 (vars)


State 44

   15 variable: _TYPE $@2 vars . declaration _SEMICOLON
   20 vars: vars . _COMMA _ID

    _ASSIGN  shift, and go to state 63
    _COMMA   shift, and go to state 64

    $default  reduce using rule 16 (declaration)

    declaration  go to state 65


State 45

   65 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 46
    _INT_NUMBER   shift, and go to state 47
    _UINT_NUMBER  shift, and go to state 48
    _LPAREN       shift, and go to state 49

    num_exp        go to state 66
    exp            go to state 52
    literal        go to state 53
    function_call  go to state 54
    rel_exp        go to state 67


State 46

   50 exp: _ID .
   57 function_call: _ID . $@7 _LPAREN argument_list _RPAREN

    _LPAREN   reduce using rule 56 ($@7)
    $default  reduce using rule 50 (exp)

    $@7  go to state 68


State 47

   54 literal: _INT_NUMBER .

    $default  reduce using rule 54 (literal)


State 48

   55 literal: _UINT_NUMBER .

    $default  reduce using rule 55 (literal)


State 49

   52 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 46
    _INT_NUMBER   shift, and go to state 47
    _UINT_NUMBER  shift, and go to state 48
    _LPAREN       shift, and go to state 49

    num_exp        go to state 69
    exp            go to state 52
    literal        go to state 53
    function_call  go to state 54


State 50

   68 return_statement: _RETURN _SEMICOLON .

    $default  reduce using rule 68 (return_statement)


State 51

   48 num_exp: num_exp . _AROP exp
   67 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 70
    _AROP       shift, and go to state 71


State 52

   47 num_exp: exp .

    $default  reduce using rule 47 (num_exp)


State 53

   49 exp: literal .

    $default  reduce using rule 49 (exp)


State 54

   51 exp: function_call .

    $default  reduce using rule 51 (exp)


State 55

   46 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 46
    _INT_NUMBER   shift, and go to state 47
    _UINT_NUMBER  shift, and go to state 48
    _LPAREN       shift, and go to state 49

    num_exp        go to state 72
    exp            go to state 52
    literal        go to state 53
    function_call  go to state 54


State 56

   53 unaryop: _ID _UNOP .

    $default  reduce using rule 53 (unaryop)


State 57

   45 compound_statement: _LBRACKET $@6 . variable_list statement_list _RBRACKET

    $default  reduce using rule 12 (variable_list)

    variable_list  go to state 73


State 58

   43 select_statement: _SELECT $@5 . vars _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

    _ID  shift, and go to state 43

    vars  go to state 74


State 59

   41 para_statement: _PARA _LPAREN . _ID _ASSIGN literal _EN literal _RPAREN statement

    _ID  shift, and go to state 75


State 60

   32 switch_statement: _SWITCH _LPAREN . _ID $@3 _RPAREN _LBRACKET cases otherwise _RBRACKET

    _ID  shift, and go to state 76


State 61

   27 statement: unaryop _SEMICOLON .

    $default  reduce using rule 27 (statement)


State 62

   64 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _SELECT    shift, and go to state 30
    _PARA      shift, and go to state 31
    _SWITCH    shift, and go to state 32

    statement             go to state 77
    switch_statement      go to state 34
    para_statement        go to state 35
    select_statement      go to state 36
    compound_statement    go to state 37
    assignment_statement  go to state 38
    unaryop               go to state 39
    if_statement          go to state 40
    if_part               go to state 41
    return_statement      go to state 42


State 63

   17 declaration: _ASSIGN . _INT_NUMBER
   18            | _ASSIGN . _UINT_NUMBER

    _INT_NUMBER   shift, and go to state 78
    _UINT_NUMBER  shift, and go to state 79


State 64

   20 vars: vars _COMMA . _ID

    _ID  shift, and go to state 80


State 65

   15 variable: _TYPE $@2 vars declaration . _SEMICOLON

    _SEMICOLON  shift, and go to state 81


State 66

   48 num_exp: num_exp . _AROP exp
   66 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 71
    _RELOP  shift, and go to state 82


State 67

   65 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 83


State 68

   57 function_call: _ID $@7 . _LPAREN argument_list _RPAREN

    _LPAREN  shift, and go to state 84


State 69

   48 num_exp: num_exp . _AROP exp
   52 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 85
    _AROP    shift, and go to state 71


State 70

   67 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 67 (return_statement)


State 71

   48 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 46
    _INT_NUMBER   shift, and go to state 47
    _UINT_NUMBER  shift, and go to state 48
    _LPAREN       shift, and go to state 49

    exp            go to state 86
    literal        go to state 53
    function_call  go to state 54


State 72

   46 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   48 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 87
    _AROP       shift, and go to state 71


State 73

   13 variable_list: variable_list . variable
   45 compound_statement: _LBRACKET $@6 variable_list . statement_list _RBRACKET

    _TYPE  shift, and go to state 21

    $default  reduce using rule 21 (statement_list)

    variable        go to state 22
    statement_list  go to state 88


State 74

   20 vars: vars . _COMMA _ID
   43 select_statement: _SELECT $@5 vars . _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

    _COMMA  shift, and go to state 64
    _FROM   shift, and go to state 89


State 75

   41 para_statement: _PARA _LPAREN _ID . _ASSIGN literal _EN literal _RPAREN statement

    _ASSIGN  shift, and go to state 90


State 76

   32 switch_statement: _SWITCH _LPAREN _ID . $@3 _RPAREN _LBRACKET cases otherwise _RBRACKET

    $default  reduce using rule 31 ($@3)

    $@3  go to state 91


State 77

   64 if_statement: if_part _ELSE statement .

    $default  reduce using rule 64 (if_statement)


State 78

   17 declaration: _ASSIGN _INT_NUMBER .

    $default  reduce using rule 17 (declaration)


State 79

   18 declaration: _ASSIGN _UINT_NUMBER .

    $default  reduce using rule 18 (declaration)


State 80

   20 vars: vars _COMMA _ID .

    $default  reduce using rule 20 (vars)


State 81

   15 variable: _TYPE $@2 vars declaration _SEMICOLON .

    $default  reduce using rule 15 (variable)


State 82

   66 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 46
    _INT_NUMBER   shift, and go to state 47
    _UINT_NUMBER  shift, and go to state 48
    _LPAREN       shift, and go to state 49

    num_exp        go to state 92
    exp            go to state 52
    literal        go to state 53
    function_call  go to state 54


State 83

   65 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _SELECT    shift, and go to state 30
    _PARA      shift, and go to state 31
    _SWITCH    shift, and go to state 32
